# mediasoup-cpp-sdk

./: CMakeLists.txt  README.md  version.h.ini
core/json/: StringBuffer.h  jsonable.hpp  serialization.hpp  string_algo.hpp  stringable.hpp
core/logger/: rtc_log_sink.cpp  rtc_log_sink.h  spd_logger.cpp  spd_logger.h
core/service/: component_factory.cpp  component_factory.h  core.cpp  core.h  dummy_video_encoder.cc  dummy_video_encoder.h  dummy_video_source.cc  dummy_video_source.h  engine.cpp  engine.h  i_engine_event_handler.h  i_media_controller.h  i_media_event_handler.h  i_mediasoup_api.h  i_participant.h  i_participant_controller.h  i_participant_event_handler.h  i_room_client.h  i_room_client_event_handler.h  i_signaling_client.h  i_signaling_event_handler.h  media_controller.cpp  media_controller.h  mediasoup_api.cpp  mediasoup_api.h  options.h  participant.cpp  participant.h  participant_controller.cpp  participant_controller.h  room_client.cpp  room_client.h  rtc_context.cpp  rtc_context.hpp  signaling_client.cpp  signaling_client.h  signaling_models.cpp  signaling_models.h
core/utils/: bad_any_cast.cc  container.hpp  i_notification.h  i_observer.hpp  interface_proxy.hpp  notification_keys.cpp  notification_keys.hpp  notifications.hpp  object_factory.hpp  observable.h  observer.hpp  sdp_utils.cpp  sdp_utils.h  singleton.h  string_utils.cpp  string_utils.h  thread_provider.cpp  thread_provider.h  universal_observable.hpp
core/websocket/: connection_metadata.h  i_connection_observer.h  i_transport.h  i_transport_observer.h  tls_websocket_endpoint.cpp  tls_websocket_endpoint.h  websocket_endpoint.cpp  websocket_endpoint.h  websocket_request.h  websocket_transport.h
sdk/: rtc_client.cpp  rtc_client.h  video_receiver.cpp  video_receiver.h
test/: reader.cpp  reader.h  test_puller.cpp  test_pusher.cpp
